--- a/src/components/landingPage/style/Navbar.css
+++ b/src/components/landingPage/style/Navbar.css
@@ -40,9 +40,13 @@
         backdrop-filter: blur(24px);
         transition: right .4s;
     }
+    .nav__list{
+        align-items: baseline !important;
+    }
 }
 .nav__list{
     display: flex;
+    align-items: center;
     flex-direction: column;
     row-gap: 3rem;
 }
