--- a/src/components/UI/style/Card.css
+++ b/src/components/UI/style/Card.css
@@ -1,6 +1,5 @@
 .profile__card{
     position: relative;
-    width: 280px;
 }
 .profile__card-image img{
     border-radius: 5px;
@@ -24,12 +23,6 @@ background: linear-gradient(0deg, rgba(2, 0, 36, .8) 0%, rgba(0, 0, 0, 0.3) 35%,
     display: flex;
     justify-content: space-between;
 }
-.profile__top span{
-    padding: 2px 10px;
-    border-radius: 20px;
-    background-color: rgba(0, 0, 0, 0.4);
-    font-size: 12px;
-}
 .profile__desc h1{
     font-weight: 500;
     color: antiquewhite;
@@ -45,52 +38,24 @@ background: linear-gradient(0deg, rgba(2, 0, 36, .8) 0%, rgba(0, 0, 0, 0.3) 35%,
     justify-content: space-between;
     margin-top: 10px;
 }
-.profile__btn a{
-    padding: 5px 14px;
-    background-color: white;
-    color: black;
-    border-radius: 20px;
-    font-weight: 600;
-    font-size: 10px;
-    cursor: pointer;
-}
-.profile__btn a .fa-phone,
-.profile__btn a .fa-heart{
-    padding-right: 5px;
-}
-.profile__btn a .fa-phone{
+
+.fa-phone{
     color: blue;
 }
-.profile__btn a .fa-heart{
+.fa-heart{
     color: red;
 }
-.profile__btn a .fa-star{
+.fa-star{
     color: gold;
 }
 @media screen and (max-width: 768px) {
     .profile__card{
         width: 320px;
     }
-    .profile__btn a{
-        font-size: 11px;
-    }
 }
 @media screen and (max-width: 425px) {
     .profile__card{
         width: 100%;
     }
-    
-    .profile__btn a{
-        font-size: 16px;
-    }
-}
-@media screen and (max-width: 375px) {
-    .profile__btn a{
-        font-size: 14px;
-    }
-}
-@media screen and (max-width: 320px) {
-    .profile__btn a{
-        font-size: 11px;
-    }
+
 }
