--- a/src/components/UI/style/Input.css
+++ b/src/components/UI/style/Input.css
@@ -9,7 +9,7 @@
     outline: none;
     background-color: transparent;
 }
-.input__box span{
+.input__box label{
     position: absolute;
     font-size: 16px;
     top: 0;
@@ -17,8 +17,27 @@
     color: var(--text-color-light);
     transition: .3s;
 }
-.input__box input:focus ~ span,
-.input__box input:valid ~ span{
+.input__box input:focus ~ label,
+.input__box input:valid ~ label{
     transform: translateY(-10px);
     font-size: 14px;
+}
+
+.error{
+    font-size: 12px;
+    margin-top: -20px;
+    margin-bottom: 10px;
+    padding: 3px;
+    color: red;
+    display: none;
+}
+input:invalid[focused="true"] ~ label{
+    color: red;
+}
+input:invalid[focused="true"]{
+    border-bottom: 1px solid red;
+}
+
+input:invalid[focused="true"] ~ span{
+    display: block;
 }
