--- a/src/components/login/style/Login.css
+++ b/src/components/login/style/Login.css
@@ -48,7 +48,8 @@
 
 .app__container{
     width: 100%;
-    height: 100vh;
+    margin: 60px 0;
+    height: 100%;
     display: grid;
     place-items: center;
 }
@@ -69,12 +70,12 @@
     height: 150px;
     top: 0;left: 0;
     z-index: 2;
-    border-radius: 0% 100% 30% 70% / 61% 0% 100% 39% ;
     animation: slide-in-top 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-    
-
 }
-
+.last{
+    display: flex;
+    flex-direction: column;
+}
 
 @keyframes slide-in-top {
 
@@ -86,4 +87,11 @@
     50% {
         height: 200%;
     }
+}
+
+.status{
+    min-height: 100dvh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
