--- a/src/components/UI/style/Card.css
+++ b/src/components/UI/style/Card.css
@@ -1,16 +1,18 @@
 .profile__card{
     position: relative;
+    max-width: 395px;
 }
 .profile__card-image img{
     border-radius: 5px;
+    width: 100%;
+    aspect-ratio: 4/5;
 }
 .profile__card-content{
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
     padding: 10px 15px;
     width: 100%;
-    height: calc(100% - 5px);
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -22,6 +24,10 @@ background: linear-gradient(0deg, rgba(2, 0, 36, .8) 0%, rgba(0, 0, 0, 0.3) 35%,
 .profile__top{
     display: flex;
     justify-content: space-between;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    padding: 10px 15px;
 }
 .profile__desc h1{
     font-weight: 500;
@@ -59,3 +65,46 @@ background: linear-gradient(0deg, rgba(2, 0, 36, .8) 0%, rgba(0, 0, 0, 0.3) 35%,
     }
 
 }
+
+
+.carousel-inner {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(69,49,49);
+}
+.carousel{
+    height: 100%;
+    width: 100%;
+}
+.carousel-item{
+    margin-right: 0 !important;
+    width: 80%;
+    object-fit: contain;
+}
+.modal{
+    width: 100%;
+    z-index: 5;
+    display: block;
+    position: absolute;
+    background: black;
+    top: 0;
+    left: 0;
+}
+
+.carousel-item img {
+    margin: 0 auto; /* this will align the image to center. */
+    width: auto; /* for those images which don't have a width specified, but has a max-height will be auto adjusted */
+  }
+
+  .close{
+    position: absolute;
+    z-index: 6;
+    right: 0;
+    font-size: 30px;
+    padding: 5px 10px;
+    margin-right: 10px;
+    cursor: pointer;
+    color: white;
+  }
