--- a/src/components/user/style/profileview.css
+++ b/src/components/user/style/profileview.css
@@ -23,14 +23,12 @@
     display: grid;
     place-items: center;
 }
-.view__scroll-image img{
-    height: 60vh;
-}
+
 .view__container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(min(100%, 450px), 1fr));
     margin: auto;
-    gap: 16px;
+    gap: 46px;
 }
 .view__profile-details .details__conatiner{
     width: 100%;
@@ -71,12 +69,13 @@
     .view__profile-details .details__conatiner{
         width: 80%;
     }
-    .view__scroll-image img{
+    .view__scroll-image{
         height: 70vh;
+        width: 100%;
     }
 }
 @media screen and (max-width: 320px) {
-    .view__scroll-image img{
+    .view__scroll-image{
         height: 60vh;
     }
     .view__profile-details .view__title{
@@ -90,4 +89,33 @@
         font-size: 11px;
         left: -25px;
     }
+}
+
+.profile_container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3%;
+    padding: 0 20px 0 40px;
+}
+.details__conatiner{
+    flex: 30%;
+}
+
+@media screen and (max-width: 920px) {
+.details__conatiner{
+    flex: 40%;
+}
+}
+@media screen and (max-width: 700px) {
+.details__conatiner{
+    flex: 100%;
+}
+}
+
+.preview_container{
+    width: 300px;
+}
+.preview_container img{
+    max-height: 100%;
+    max-width: 100%;
 }
