--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@ button {
 }
 
 body {
-  background-color: var(--body-color);
+  background-color: var(--white-color);
   color: var(--text-color);
 }
 
