--- a/src/components/landingPage/style/Navbar.css
+++ b/src/components/landingPage/style/Navbar.css
@@ -1,7 +1,7 @@
 .header{
     position: fixed;
     width: 100%;
-    background-color: var(--body-color);
+    background-color: var(--white-color);
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
@@ -48,10 +48,10 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    row-gap: 3rem;
+    row-gap: 2rem;
 }
 .nav__link{
-    color: var(--font-color);
+    color: var(--first-color-dark);
     font-weight: var(--font-medium);
 }
 .nav__close{
