--- a/src/components/user/style/profileview.css
+++ b/src/components/user/style/profileview.css
@@ -147,4 +147,8 @@ form .image_container{
 .btn_group{
     display: flex;
     gap: 20px;
+    margin-bottom: 20px;
+}
+td span{
+    text-align: right;
 }
