--- a/src/components/landingPage/style/Home.css
+++ b/src/components/landingPage/style/Home.css
@@ -25,7 +25,7 @@
 @media screen and (max-width: 1024px) {
     section{
         max-width: 1156px;
-        padding: 0 1.5rem;
+        padding: 1.5rem;
     }
 }
 @media screen and (max-width: 769px) {
@@ -40,7 +40,7 @@
 @media screen and (max-width: 426px) {
     section{
         width: 100%;
-        padding-top: 0;
+        padding-top: 20px;
     }
     .home__img{
         width: 200px;
