--- a/src/components/user/style/Interest.css
+++ b/src/components/user/style/Interest.css
@@ -1,9 +1,10 @@
 .Interest__container{
-    margin: 20px 0;
+    margin: 0;
+    padding: 0;
     min-height: 100dvh;
 }
 .interest__nav{
-    margin: 20px 0;
+    margin-bottom: 20px;
 }
 .interest__nav a{
     position: relative;
