--- a/src/components/user/style/Search.css
+++ b/src/components/user/style/Search.css
@@ -5,10 +5,9 @@
   padding: 25px;
   border-radius: 8px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-  margin-top: 20px;
   max-width: 700px;
   width: 90%;
-  margin: 20px auto;
+  margin: auto;
 }
 .searchcontainer header {
   font-size: 1.5rem;
