--- a/src/components/admin/style/Dashboard.css
+++ b/src/components/admin/style/Dashboard.css
@@ -39,6 +39,8 @@
     color: transparent;
   opacity: 0;
   transition: all 0.5s ease;
+  height: 50px;
+    width: 100px;
 }
 .sidebar.open .logo-details .icon,
 .sidebar.open .logo-details .logo_name{
@@ -137,7 +139,8 @@
   background: #FFF;
   color: #11101d;
 }
-.sidebar li a{
+.sidebar li a,
+.logout .links_name{
   display: flex;
   height: 100%;
   width: 100%;
@@ -150,7 +153,8 @@
 .sidebar li a:hover{
   background: #FFF;
 }
-.sidebar li a .links_name{
+.sidebar li a .links_name,
+.logout .links_name{
   color: var(--first-color-dark);
   font-size: 15px;
   font-weight: 400;
@@ -159,7 +163,8 @@
   pointer-events: none;
   transition: 0.4s;
 }
-.sidebar.open li a .links_name{
+.sidebar.open li a .links_name,
+.sidebar.open .logout .links_name{
   opacity: 1;
   pointer-events: auto;
 }
@@ -174,61 +179,15 @@
   font-size: 18px;
   border-radius: 12px;
 }
-.sidebar li.profile{
-  position: fixed;
-  height: 60px;
-  width: 78px;
-  left: 0;
-  bottom: -8px;
-  padding: 10px 14px;
-  background: var(--first-color-light);
-  transition: all 0.5s ease;
-  overflow: hidden;
-}
-.sidebar.open li.profile{
-  width: 250px;
-}
-.sidebar li .profile-details{
+.sidebar .logout{
+  position: absolute;
+  bottom: 0;
   display: flex;
   align-items: center;
-  flex-wrap: nowrap;
 }
-.sidebar li img{
-  height: 45px;
-  width: 45px;
-  object-fit: cover;
-  border-radius: 6px;
-  margin-right: 10px;
-}
-.sidebar li.profile .name,
-.sidebar li.profile .job{
-  font-size: 15px;
-  font-weight: 400;
-  color: var(--first-color-dark);
-  white-space: nowrap;
-}
-.sidebar li.profile .job{
-  font-size: 12px;
-}
-.sidebar .profile #log_out{
-  position: absolute;
-  top: 50%;
-  right: 0;
-  transform: translateY(-50%);
-  background: var(--first-color-light);
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  border-radius: 0px;
-  transition: all 0.5s ease;
-}
-.sidebar.open .profile #log_out{
-  width: 50px;
-  background: none;
-}
+
 .home-section{
   position: relative;
-  background: var(--body-color);
   min-height: calc(100vh - 70px);
   top: 70px;
   left: 78px;
