--- a/src/components/UI/style/Smallcard.css
+++ b/src/components/UI/style/Smallcard.css
@@ -7,12 +7,14 @@
     flex-direction: column;
     align-items: center;
     row-gap: 10px;
+    box-shadow: 1px 1px 12px 1px rgba(0,0,0,0.15);
+    max-width: 250px;
 }
 .sm-image img{
     border-radius: 5px;
     width: 150px;
     height: 150px;
-    object-fit: cover;
+    object-fit: contain;
 }
 .sm-details{
     display: flex;
@@ -31,18 +33,11 @@
     width: 100%;
     row-gap: 10px;
 }
-.sm-btn button{
-    display: block;
-}
 
-@media screen and (max-width: 1440px) {
-    .sm-btn button i{
-        padding-right: 5px;
-    }
-}
 @media screen and (max-width: 425px) {
     .sm-container{
         flex-direction: row;
+        max-width: 100%;
         height: 100%;
     }
     .sm-image img{
