--- a/src/components/landingPage/style/Home.css
+++ b/src/components/landingPage/style/Home.css
@@ -37,7 +37,7 @@
     section{
         max-width: 960px;
         width: 100%;
-        padding: 0;
+        padding: 20px;
     }
     .home__img{
         width: 250px;
@@ -45,9 +45,7 @@
 }
 @media screen and (max-width: 426px) {
     section{
-        width: 100%;
-        padding: 0;
-        
+        width: 100%;        
     }
     .home__img{
         width: 200px;
