--- a/src/components/user/style/Shortlist.css
+++ b/src/components/user/style/Shortlist.css
@@ -1,7 +1,6 @@
 .shortlist{
     position: relative;
     display: grid;
-    place-items: center;
     grid-template-columns: repeat(auto-fit, minmax(min(100%, 280px), 1fr));
     margin: auto;
     gap: 16px;
@@ -22,4 +21,8 @@
     .userhome__container{
         grid-template-columns: repeat(auto-fit, minmax(min(100%, 100%), 1fr));
     }
+}
+
+.no-data{
+    margin-top: 20px;
 }
