--- a/src/components/UI/style/Card.css
+++ b/src/components/UI/style/Card.css
@@ -32,10 +32,10 @@ background: linear-gradient(0deg, rgba(2, 0, 36, .8) 0%, rgba(0, 0, 0, 0.3) 35%,
 }
 .profile__desc h1{
     font-weight: 500;
-    color: antiquewhite;
+    color: rgb(255, 255, 255);
 }
 .profile__desc h4{
-    color: antiquewhite;
+    color: rgb(255, 255, 255);
     font-weight: 300;
     font-size: 12px;
 }
@@ -77,6 +77,7 @@ background: linear-gradient(0deg, rgba(2, 0, 36, .8) 0%, rgba(0, 0, 0, 0.3) 35%,
 .carousel{
     height: 100%;
     width: 100%;
+    background-color: white;
 }
 .carousel-item{
     margin-right: 0 !important;
@@ -135,4 +136,12 @@ background: linear-gradient(0deg, rgba(2, 0, 36, .8) 0%, rgba(0, 0, 0, 0.3) 35%,
   .carousel-inner{
     width: 100%;
     margin: 0;
+  }
+
+  .userhome__container:has(.modal){
+    max-height: 0;
+    overflow: hidden;
+  }
+  .home-section:has(.profileview){
+    padding: 0;
   }
