--- a/src/components/landingPage/style/Home.css
+++ b/src/components/landingPage/style/Home.css
@@ -6,6 +6,11 @@
     text-align: center;
 }
 
+.home__data a{
+    display: flex;
+    justify-content: center;
+}
+
 .home__title-box div{
     background: var(--gradient-color);
     padding: .25rem .25rem;
@@ -43,7 +48,7 @@
         width: 250px;
     }
 }
-@media screen and (max-width: 426px) {
+@media screen and (max-width: 450px) {
     section{
         width: 100%;        
     }
