--- a/src/components/UI/style/Card.css
+++ b/src/components/UI/style/Card.css
@@ -7,6 +7,7 @@
     width: 100%;
     aspect-ratio: 4/5;
     object-fit: cover;
+    border: 1px solid #d7cbcb96;
 }
 .profile__card-content{
     position: absolute;
