--- a/src/components/user/style/profileview.css
+++ b/src/components/user/style/profileview.css
@@ -115,21 +115,23 @@
 }
 
 .preview_container{
-    width: 300px;
+    width: 200px;
 }
 .preview_container img{
     max-height: 100%;
     max-width: 100%;
+    aspect-ratio: 4/5;
+    border-radius: 5px;
 }
 
 .image_wrapper{
     max-width: 750px;
 }
-form .image_container{
-    border: 2px dashed grey;
-    background-color: #80808094;
+div .image_container{
     padding: 10px;
     margin: 10px;
+    width: 220px;
+    height: 276px;
 }
 
 .radio_group{
