--- a/src/components/UI/style/Button.css
+++ b/src/components/UI/style/Button.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     column-gap: .25rem;
-    padding: .5rem 1rem;
+    padding: .5rem .8rem;
     border-radius: 4rem;
     font-weight: var(--font-medium);
     border: 0;
