--- a/src/components/user/style/image.css
+++ b/src/components/user/style/image.css
@@ -1,33 +1,66 @@
 .image_container{
     position: relative;
-    height: 250px;
 }
 .image_container input{
     display: none;
 }
 .image_container label,
-.image_container .preview_container,
 .image_container .image-choose{
     position: absolute;
-    width: 100%;
-    height: 250px;
+    top: 10px;
+    left: 10px;
+    width: calc(100% - 20px);
+    height: calc(100% - 25px);
+    border-radius: 5px;
+    box-shadow: 0px 0px 6px 0px #00000031;
 }
 .image_container .image-choose{
-    z-index: 1;
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    flex-direction: column;
+    text-align: center;
+    text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
+}
+.image_container .image-choose i{
+    font-size: 50px;
+}
+.image_container .image-choose span{
+    font-size: 20px;
 }
 .image_container label{
-    z-index: 2;
-    color: blue;
-}
-.imageCropper{
-    position: absolute;
-    top: 0;
-    left: 0;
     z-index: 3;
-    width: 100%;
-    height: 100dvh;
 }
-.imageCropper button{
+
+.image-container{
+    display: flex;
+    width: 100%;
+    overflow-x: scroll;
+}
+.image-container::-webkit-scrollbar{
+    display: none;
+}
+.image-btn{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+.img-delete{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+.img-delete i{
+    color: red;
+}
+.image_wrapper .imageCropper button,
+.reactEasyCrop_Container{
     position: absolute;
-    
+    z-index: 5;
+}
+.image_wrapper .imageCropper button{
+    top: 80%;
+    left: 50%;
+    transform: translateX(-50%);
 }
