--- a/src/components/UI/style/Card.css
+++ b/src/components/UI/style/Card.css
@@ -61,9 +61,12 @@ background: linear-gradient(0deg, rgba(2, 0, 36, .8) 0%, rgba(0, 0, 0, 0.3) 35%,
         width: 320px;
     }
 }
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 450px) {
     .profile__card{
         width: 100%;
+    }
+    .close{
+        margin-top: 100px;
     }
 
 }
@@ -83,6 +86,7 @@ background: linear-gradient(0deg, rgba(2, 0, 36, .8) 0%, rgba(0, 0, 0, 0.3) 35%,
 .carousel-item{
     margin-right: 0 !important;
     object-fit: contain;
+    position: relative;
 }
 .modal{
     width: 100%;
@@ -96,7 +100,6 @@ background: linear-gradient(0deg, rgba(2, 0, 36, .8) 0%, rgba(0, 0, 0, 0.3) 35%,
 
 .carousel-item img {
     margin: 0 auto; /* this will align the image to center. */
-    height: 70vh;
     border-radius: 5px;
     box-shadow: 1px 1px 12px 1px rgba(0,0,0,0.15);
     width: auto; /* for those images which don't have a width specified, but has a max-height will be auto adjusted */
@@ -108,10 +111,10 @@ background: linear-gradient(0deg, rgba(2, 0, 36, .8) 0%, rgba(0, 0, 0, 0.3) 35%,
     right: 0;
     font-size: 20px;
     padding: 5px 12px;
-    margin-top: 30px;
-    margin-right: 30px;
+    margin-top: -15px;
+    margin-right: -15px;
     cursor: pointer;
-    background-color: white;
+    background-color: rgb(255 255 255);
     box-shadow: 2px 3px 10px 1px rgba(0,0,0,0.15);
     border-radius: 50%;
   }
@@ -122,7 +125,7 @@ background: linear-gradient(0deg, rgba(2, 0, 36, .8) 0%, rgba(0, 0, 0, 0.3) 35%,
     cursor: pointer;
     position: absolute;
     padding: 10px 17px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.404);
     box-shadow: 2px 3px 10px 1px rgba(0,0,0,0.15);
     border-radius: 50%;
     top: 50%;
@@ -145,4 +148,24 @@ background: linear-gradient(0deg, rgba(2, 0, 36, .8) 0%, rgba(0, 0, 0, 0.3) 35%,
   }
   .home-section:has(.profileview){
     padding: 0;
+  }
+
+  .carousel-dot{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .dot-indicators{
+    width: 10px;
+    height: 10px;
+    border-radius: 20px;
+    background-color: #0000007c;
+    position: absolute;
+    bottom: 40px;
+    transition-duration: 1s;
+  }
+  .dot-indicators.active{
+    width: 30px;
+    height: 10px;
+    background-color: #ffffff7c;
   }
