--- a/src/components/UI/style/Loader.css
+++ b/src/components/UI/style/Loader.css
@@ -51,3 +51,19 @@
       box-shadow: 0 0 0 0 rgba(178, 212, 252, 0.7);
     }
   }
+
+  .btn-loader{
+    border: 2px solid transparent;
+    border-radius: 50%;
+    border-top-color: black;
+    border-bottom: black;
+    border-left-color: black;
+    height: 20px;
+    width: 20px;
+    animation: spin 0.7s linear infinite;
+  }
+
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
