--- a/src/components/login/style/Login.css
+++ b/src/components/login/style/Login.css
@@ -38,6 +38,9 @@
     border: none;
     padding: 5px;
     box-shadow: 0 0 5px 1px var(--first-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .link{
     background: var(--gradient-color);
