--- a/src/components/UI/style/Card.css
+++ b/src/components/UI/style/Card.css
@@ -111,10 +111,10 @@ background: linear-gradient(0deg, rgba(2, 0, 36, .8) 0%, rgba(0, 0, 0, 0.3) 35%,
     right: 0;
     font-size: 20px;
     padding: 5px 12px;
-    margin-top: -15px;
-    margin-right: -15px;
+    margin-top: 5px;
+    margin-right: 5px;
     cursor: pointer;
-    background-color: rgb(255 255 255);
+    background-color: rgba(255, 255, 255, 0.37);
     box-shadow: 2px 3px 10px 1px rgba(0,0,0,0.15);
     border-radius: 50%;
   }
@@ -154,18 +154,17 @@ background: linear-gradient(0deg, rgba(2, 0, 36, .8) 0%, rgba(0, 0, 0, 0.3) 35%,
     width: 100%;
     display: flex;
     justify-content: center;
-  }
-  .dot-indicators{
-    width: 10px;
-    height: 10px;
-    border-radius: 20px;
-    background-color: #0000007c;
     position: absolute;
     bottom: 40px;
+    gap: 10px;
+  }
+  .dot-indicators{
+    width: 30px;
+    height: 5px;
+    border-radius: 20px;
+    background-color: #ffffff7c;
     transition-duration: 1s;
   }
   .dot-indicators.active{
-    width: 30px;
-    height: 10px;
-    background-color: #ffffff7c;
+    background-color: white;
   }
