--- a/src/components/user/style/settings.css
+++ b/src/components/user/style/settings.css
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     padding: 10px;
+    box-shadow: 0px 1px 0px 0px #0000001c;
 }
 .setting-items a i{
     font-size: 20px;
